2009-09-04  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Task #4448: Cleanup: Remove randombyte-generator
	* Feature #4446: Add short labels for extension configuration template


2009-05-18  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bug #3436: Problems with Localization


2009-05-18  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bug #3365: PHP complains about deprecated call-time pass-by-reference


2009-05-10  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bug #3254: Code cleanup - remove unnecessary method call (user record)


2009-03-24  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bug #2956: Forget Password mail not send due to wrong forgothash


2009-03-23  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bug #2951: Form evaluation fails for activated salted passwords in one TYPO3 mode only


2009-03-07  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bug #2323: HTML Entities in Plain-Text-Mail
	* Feature #2742: Get template configuration from felogin
	* Bug #2743: felogin "forgot password" form does not work with t3sec_saltedpw
	* Bug #2741: BE users cannot change their own passwords - add warning in extension configuration


2009-01-31  Marcus Krause   <marcus#exp2009@t3sec.info>

	* implement Unit-Test that tests update necessity for decreased standard hash count (follow-up to #2441)


2009-01-10  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bug #2439: In case of a modifed HASHCOUNT, a non-valid PHPass password would be set
	* Bug #2438: Missing 2nd argument for method call updatePassword in service class
	* Bug #2440: In PHPass method isHashUpdateNeeded() current hashcount is accessed by using class constant
	* Feature #2441: Only require a hash update if hash count has been increased
	* Task #2437: Use shorthand logical comparisons


2009-01-06  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Task #2410: Adjust mail address of maintainer to reflect new year


2008-12-19  Marcus Krause   <marcus#exp2009@t3sec.info>
